# Datura-ai-FastAPI-Task

./: .env.example  Dockerfile  README.md  TASK.md  docker-compose.yml  main.py  pyproject.toml  setup_wallet.py
app/: auth.py  database.py  main.py  models.py  taodiv.py  worker.py
tests/: conftest.py  test_api.py  test_taodiv.py
